--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,31 @@
     font-weight: normal;
     src: url("../fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-regular-webfont.ttf") format("truetype");
 }
+@font-face {
+    font-family: "lato-light";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../fonts/lato/Lato-Light.ttf");
+}
+@font-face {
+    font-family: "lato-regular";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../fonts/lato/Lato-Regular.ttf");
+}
+@font-face {
+    font-family: "lato-bold";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../fonts/lato/Lato-Bold.ttf");
+}
+@font-face {
+    font-family: "lato-black";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../fonts/lato/Lato-Black.ttf");
+}
+
 /* SASS VARIABLES */
 /* * * * * * * * * * * * * * * *
 *                             *
@@ -96,12 +121,12 @@ body {
     /*     background: #1D1D1D; */
 
     background: #f3f3f4;
-
-
-    /* font-family: "monster_h", sans-serif; */
     font-weight: 600;
+
+    font-family: "monster_h", sans-serif;
+
     /*     color: #E6E6E6; */
-    font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
 .m
@@ -271,6 +296,7 @@ aside figure figcaption {
     top: -42px;
     /*     font-family: "monster_h", sans-serif; */
     /*     color: #B1B1B1; */
+    font-family: lato-light;
     color: #00fbff;
 }
 
@@ -376,7 +402,7 @@ a:visited {
 }
 
 #w1-left h1 {
-    font-family: "monster_l", sans-serif;
+    font-family: "lato-light", sans-serif;
     font-size: 2em;
 }
 
@@ -590,6 +616,7 @@ a:visited {
 }
 
 .overview-panel .market-list .market-item-header {
+    font-family: "lato-regular";
     border-bottom: 1px solid #272E32;
     padding-bottom: 10px;
     position: relative;
@@ -618,7 +645,8 @@ a:visited {
 }
 
 .overview-panel .market-list #current-spot:hover {
-    color: #E6E6E6;
+    /*font-family: "lato-bold";*/
+    color:black;
 }
 
 .overview-panel .market-list .market-item-stats {
@@ -634,10 +662,12 @@ a:visited {
 }
 
 .overview-panel .market-list .market-item-stats table tr:first-child {
-    color: #68CEDE;
+    font-family: "lato-light";
+    color: #0960FF;
 }
 
 .overview-panel .market-list .market-item-stats td {
+    font-family: "lato-regular";
     text-align: center;
     width: 33%;
     margin: 0;
@@ -663,8 +693,8 @@ a:visited {
     display: inline-block;
     vertical-align: top;
     margin-left: 50px;
-    width: -webkit-calc(100% - 360px);
-    width: calc(100% - 360px);
+    width: -webkit-calc(100% - 354px);
+    width: calc(100% - 354px);
     height: 455px;
     position: relative;
 
@@ -676,8 +706,8 @@ a:visited {
 }
 
 .graph-panel .chart-wrap {
-    width: -webkit-calc(100% - 150px);
-    width: calc(100% - 150px);
+    width: -webkit-calc(100%);
+    width: calc(100%);
     height: 100%;
     background-color:white;
 }
@@ -786,6 +816,7 @@ a:visited {
 .my_stack {
     clear: both;
     margin-top: 30px;
+    font-family: "lato-regular";
 
 }
 
@@ -804,7 +835,7 @@ a:visited {
     width: 16%;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-family: "monster_r";
+    font-family: "lato-bold";
     font-weight: bold;
     border-bottom: 1px solid grey;
 }
@@ -814,10 +845,15 @@ a:visited {
     padding-bottom: 10px;
 
 }
-
+.my_stack table tbody > tr {
+    background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    font-family: "lato-light";
+}
 .my_stack table tbody > tr:hover {
     background-color: rgba(255, 255, 255, 0.1);
     cursor: pointer;
+    font-family: "lato-bold";
 }
 
 .my_stack table caption {
@@ -900,7 +936,7 @@ a:visited {
 
 .coin_detail {
     float: left;
-     padding-bottom: 50px;
+    padding-bottom: 50px;
     background-color: white;   border-color: #e7eaec;   border-image: none;   border-style: solid solid none;   border-width: 4px 0px 0;   color: inherit;   margin-bottom: 0;
     padding: 14px 15px 7px;   min-height: 48px;
     border-top-width: 5px;     padding-top: 50px;     padding-right: 50px;     padding-left: 50px;     padding-bottom: 50px;
@@ -965,7 +1001,7 @@ a:visited {
 }
 
 strong {
-    font-family: "monster_r";
+    font-family: "lato-bold";
     font-weight: 700;
 }
 /* * * * * * * * * * * * * * * *
@@ -975,20 +1011,22 @@ strong {
 * * * * * * * * * * * * * * * */
 
 input {
-    background-color: #4c4c4c;
+    /*background-color: #4c4c4c;*/
     width: 125px;
     height: 27px;
     padding: 0 10px;
     border: none;
-    color: white;
-    font-family: "monster_h";
+
+    font-family: "lato-light";
     font-size: 13px;
     border-radius: 5px;
     outline: 0;
 }
 
 input:focus {
-    outline: 2px solid #68CEDE;
+    /*outline: 2px solid #68CEDE;*/
+    box-shadow: 0 0 10px rgba(81, 203, 238, 1);
+    border: 1px solid rgba(81, 203, 238, 1);
 }
 
 select {
@@ -1004,7 +1042,7 @@ select {
     height: 27px;
     color: white;
     border: none;
-    font-family: "monster_h";
+    font-family: "lato-light";
     font-size: 13px;
     padding-left: 10px;
     border-radius: 5px;
@@ -1061,6 +1099,9 @@ select {
 
         padding-left: 0;
     }
+    .coin_wrapper {
+        margin-left: 0;
+    }
     .coin_main {
         width: 100%;
         text-align: center;
@@ -1091,6 +1132,7 @@ select {
         display: none;
     }
     .my_stack .label-and-search {
+
         display: none;
     }
     .overview-panel {
