--- a/view/wire3.html
+++ b/view/wire3.html
@@ -9,19 +9,11 @@
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="../js/jquery-1.11.2.min.js"></script>
-    <script src="../js/Chart.js"></script>
-    <script src="../js/main.js"></script>
+
     <title>My Gold - CoinFlip</title>
 </head>
 
 <body>
-    <script>
-    loadTopNav();
-    </script>
-    <script>
-    loadSideNav(1);
-    </script>
     <section class="main-section">
         <section class="coin_wrapper">
             <div class="mobile-nav">
@@ -88,9 +80,9 @@
                     <section class="market-item-stats">
                         <table>
                             <tr>
-                                <td>1206.10</td>
-                                <td>1207.10</td>
-                                <td class="pos-change">+23.40</td>
+                                <td id='bid'></td>
+                                <td id='ask'></td>
+                                <td id='change'></td>
                             </tr>
                             <tr>
                                 <td>Bid</td>
@@ -119,7 +111,7 @@
                 <div class="chart-y-label">PRICE</div>
                 <div class="chart-x-label">TIME</div>
                 <section class="chart-wrap">
-                    <canvas id="total-chart"></canvas>
+                    <div id="chartDiv"></div>
                 </section>
             </section>
 
@@ -148,51 +140,20 @@
                             <th>Value</th>
                         </tr>
                     </thead>
-                    <tbody id="table-data">
-                        <!-- <tr>
-                            <td class="stack_img_col"><div class="coin_mini"></div></td>
-                            <td><a href="wire4.html"></a>US Eagle</td>
-                            <td>1</td>
-                            <td>1.244</td>
-                            <td>.917</td>
-                            <td>1199.10</td>
-                        </tr>
-                        <tr>
-                            <td class="stack_img_col"><div class="coin_mini"></div></td>
-                            <td><a href="wire4.html"></a>US Eagle</td>
-                            <td>5</td>
-                            <td>1.244</td>
-                            <td>.917</td>
-                            <td>5995.50</td>
-                        </tr>
-                        <tr>
-                            <td class="stack_img_col"><div class="coin_mini"></div></td>
-                            <td><a href="wire4.html"></a>US Eagle</td>
-                            <td>5</td>
-                            <td>1.244</td>
-                            <td>.917</td>
-                            <td>5995.50</td>
-                        </tr> -->
-                    </tbody>
+                    <tbody id="table-data"></tbody>
                 </table>
             </section>
         </section>
     </section>
-    <script>
-	var tr = document.createElement("tr");
-	
-	for(var i = 0; i<6; i++){
-		var td = document.createElement("td");
-		var textNode = document.createTextNode(i);
-		td.appendChild(textNode);
-		tr.appendChild(td);
+    <script src="../js/main.js"></script>
+    <script src="../js/wire3.js"></script>
+    <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
+    <script src="../js/zingdata.js"></script>
 
-	}
-    document.getElementById('table-data').appendChild(tr);
-    
-    
-    
-        loadFooter();
+    <script>
+    loadTopNav();
+    loadSideNav(1);
+    loadFooter();
     </script>
 </body>
 
