--- a/view/wire4.html
+++ b/view/wire4.html
@@ -110,6 +110,96 @@
         </section>
     </section>
     <script >
+
+    function appendRow(id, data) {
+        var tr = document.createElement("tr");
+        var td = document.createElement("td");
+        var imageNode = document.createElement("img");
+
+        tr.id = data.objectId; // Add objectId to row for lookup
+        tr.setAttribute('updatedat', data.updatedAt); // Add timestamp to row for lookup
+
+        imageNode.src = data.image.url;
+        imageNode.className = 'coin-img';
+
+        td.appendChild(imageNode);
+        tr.appendChild(td);
+        delete data.image;
+
+        var tmpArr = [data.item, data.quantity, data.weight, data.percent, data.value];
+        tmpArr.forEach(function(val, key) {
+            var textNode = document.createTextNode(val);
+            var td = document.createElement("td");
+
+            td.appendChild(textNode);
+            tr.appendChild(td);
+        });
+
+        document.getElementById(id).appendChild(tr);
+    }
+
+    function getData(cb) {
+        var appId = "iFY8hb8r6Ue1Qh98NBCP1tWshhexxQS1tOsRTk0W";
+        var apiKey = "xPKaGBUFnH5vhMN8W77wuuGFoeesi4zbl0H2bLL1";
+
+        var req = new XMLHttpRequest();
+
+        // Request Handler
+        req.onreadystatechange = function(oEvent) {
+            if (req.readyState === 4) {
+                if (req.status === 200) { // Handle Success and Failure
+                    // Parse the string into a JSON obj
+                    var tmpObj = JSON.parse(req.responseText);
+                    console.log(tmpObj.results);
+                    cb(tmpObj.results);
+                } else {
+
+                    console.log("Error: ", req.statusText); // Error Message
+                }
+            }
+        };
+
+        // Open the request with the Url Encoded String for login
+        req.open("GET", "https://api.parse.com/1/classes/coin", true);
+
+        // Set Request Header for Parse
+        req.setRequestHeader("X-Parse-Application-Id", appId);
+        req.setRequestHeader("X-Parse-REST-API-Key", apiKey);
+        req.send(); // Finally send the request
+    }
+
+    // Timestamp table look up only refresh certain row
+    // Loop through table, check timestamp of each row,
+    // if it's changed replace the element, if not continue,
+    // if the element does not exist, append
+    window.onload = function() {
+        getData(function(data) {
+            console.log(data);
+            data.forEach(function(val, key) {
+
+                appendRow('table-data', val);
+            });
+        });
+
+        document.getElementById('refresh-btn').addEventListener('click', function() {
+            // Get data
+            getData(function(data) {
+                data.forEach(function(val, key) {
+                    var row = document.getElementById(val.objectId);
+                    if (row) {
+                        if (val.updatedAt == row.getAttribute("updatedat")) {
+                            alert(val.objectId + ' hasn\'t changed!');
+                        } else {
+                            alert(val.objectId + ' has changed! ');
+                        }
+                    } else {
+                        //appendRow('table-data', val);
+                    }
+
+                });
+            });
+        });
+    }
     loadFooter();
     </script>
 </body>
