--- a/style/style.css
+++ b/style/style.css
@@ -745,7 +745,7 @@ a:visited {
     width: -webkit-calc(100%);
     width: calc(100%);
     height: 100%;
-    background-color:white;
+    /*background-color:white;*/
 }
 
 .graph-panel .chart-y-label {
