uploads image in parse

--- a/view/wire5.html
+++ b/view/wire5.html
@@ -17,10 +17,10 @@
 
 <body>
     <script>
-    //loadTopNav();
+    loadTopNav();
     </script>
     <script>
-    //loadSideNav(1);
+    loadSideNav(1);
     </script>
     <section class="main-section">
         <section class="coin_wrapper">
@@ -53,10 +53,9 @@
                     <div class="img_box">
                         <input type="file" id ="file_upload"  accept="image/*" onchange="loadFile(event)"style="visibility:hidden"; >
                         <label id="btn-logo" onclick="triggerFunction()"><strong>+</strong></label>
-
-                        <img id="output"width="170px" height="170px"/>
-
+                        <img id="output" width = "150px" height="150px"/>
                     </div>
+                    
                    
                     
 
@@ -130,14 +129,16 @@
                             <td><strong>1199.10</strong></td>
                         </tr>
                     </table>
-                    <button id="uploadbutton"  ><span>Save to My Stack</span></button>
+                    
+                    <span  id="save">Save to my Stack</span>
+                    <a href="wire.html" id="link"></a>
                     <a href="wire3.html"><span id="cancel">Cancel</span></a>
                 </section>
             </div>
         </section>
     </section>
     <script>
-    //loadFooter();
+    loadFooter();
     </script>
 </body>
 
