--- a/view/wire2.html
+++ b/view/wire2.html
@@ -6,27 +6,54 @@
     <meta name="description" content="bullion management site, rare coins, gold, silver, platinum">
     <meta name="author" content="CSE134B Dream Team">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
+
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="../js/jquery-1.11.2.min.js"></script>
-    <!--     <script src="../js/Chart.js"></script> -->
-    <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
+
+    <title>My Gold - CoinFlip</title>
     <script src="../js/main.js"></script>
-    <title>Home - CoinFlip</title>
+    <script src="../js/wire3.js"></script>
+    <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
+    <script src="../js/zingdata.js"></script>
 </head>
 
 <body>
-<script>loadTopNavPersist();</script>
-<script>loadSideNav(0);</script>
+
+<script>
+loadTopNav();
+loadSideNav(1);
+</script>
 
 <section class="main-section">
     <section class="coin_wrapper">
+        <div class="mobile-nav">
+            <a href="wire2.html">
+                <svg class="icon icon-keyboard-arrow-left">
+                    <symbol id="icon-keyboard-arrow-left" viewBox="0 0 1024 1024">
+                        <title>keyboard-arrow-left</title>
+                        <path class="path1" d="M657.707 696.96l-195.627-195.627 195.627-195.627-60.373-60.373-256 256 256 256z"></path>
+                    </symbol>
+                    <use xlink:href="#icon-keyboard-arrow-left"></use>
+                </svg>
+            </a>
+         </div>
         <section class="overview-panel">
-            <section class="total-value">
-                <div class="total-dollars">$24,249.23</div>
-                <div class="total-change pos-change">+3.5%</div><br/>
-                <div class="total-label">My Total Coin Value</div>
+            <section id="total-value" class="total-value">
+                <div class="total-dollars">0</div>
+                <table class="current_gold">
+                    <tr>
+                        <td>Daily</td>
+                        <td id="daily-percent">0</td>
+                    </tr>
+                    <tr>
+                        <td>Overall</td>
+                        <td id="overall-percent">0</td>
+                    </tr>
+                </table>
+                <div class="total-label" id="my_gold_value">My Total Stack Value</div>
+
             </section>
             <section class="mobile-toggle">
                 <div class="mobile-toggle-button mtb-1 mobile-toggle-selected">
@@ -48,97 +75,74 @@
                     </svg>
                 </div>
             </section>
-            <section class="market-status">
-                <div class="market-open">Market is open</div>
-                <div class="market-time">closes in 3h 36min</div>
-            </section>
-            <section class="market-list">
 
-                <a href="wire3.html">
-                    <section class="market-item-header">
+            <section class="market-item-container">
+                <div id="mloader" class="market-item-loader">
+                    <i class=""><span class="fa fa-spinner fa-spin"></span></i>
+                </div>
+                <div class="market-list">
+
+                    <div class="market-item-header" id="gold">
                         Gold
-                        <svg class="icon icon-play-arrow">
-                            <symbol id="icon-play-arrow1" viewBox="0 0 1024 1024">
-                                <title>play-arrow</title>
-                                <path class="path1" d="M341.333 213.333v597.333l469.333-298.667z"></path>
-                            </symbol>
-                            <use xlink:href="#icon-play-arrow1"></use>
-                        </svg>
-                    </section>
-                </a>
-                <section class="market-item-stats">
-                    <table>
-                        <tr>
-                            <td>1206.10</td>
-                            <td>1207.10</td>
-                            <td class="pos-change">+23.40</td>
-                        </tr>
-                        <tr>
-                            <td>Bid</td>
-                            <td>Ask</td>
-                            <td>Change</td>
-                        </tr>
-                    </table>
-                </section>
+                    </div>
 
-
-                <a href="wire3.html">
-                    <section class="market-item-header">
+                    <div class="market-item-stats">
+                        <table>
+                            <tr>
+                                <td id='bid'></td>
+                                <td id='ask'></td>
+                                <td id='change'></td>
+                            </tr>
+                            <tr>
+                                <td>Bid</td>
+                                <td>Ask</td>
+                                <td>Change</td>
+                            </tr>
+                        </table>
+                    </div>
+					<div class="market-item-header" id="silver">
                         Silver
-                        <svg class="icon icon-play-arrow">
-                            <symbol id="icon-play-arrow2" viewBox="0 0 1024 1024">
-                                <title>play-arrow</title>
-                                <path class="path1" d="M341.333 213.333v597.333l469.333-298.667z"></path>
-                            </symbol>
-                            <use xlink:href="#icon-play-arrow2"></use>
-                        </svg>
-                    </section>
-                </a>
-                <section class="market-item-stats">
-                    <table>
-                        <tr>
-                            <td>16.10</td>
-                            <td>16.50</td>
-                            <td class="neg-change">-0.36</td>
-                        </tr>
-                        <tr>
-                            <td>Bid</td>
-                            <td>Ask</td>
-                            <td>Change</td>
-                        </tr>
-                    </table>
-                </section>
-                <a href="wire3.html">
-                    <section class="market-item-header">
+                    </div>
+
+                    <div class="market-item-stats">
+                        <table>
+                            <tr>
+                                <td id='bid'></td>
+                                <td id='ask'></td>
+                                <td id='change'></td>
+                            </tr>
+                            <tr>
+                                <td>Bid</td>
+                                <td>Ask</td>
+                                <td>Change</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="market-item-header" id="platinum">
                         Platinum
-                        <svg class="icon icon-play-arrow">
-                            <symbol id="icon-play-arrow3" viewBox="0 0 1024 1024">
-                                <title>play-arrow</title>
-                                <path class="path1" d="M341.333 213.333v597.333l469.333-298.667z"></path>
-                            </symbol>
-                            <use xlink:href="#icon-play-arrow3"></use>
-                        </svg>
-                    </section>
-                </a>
-                <section class="market-item-stats">
-                    <table>
-                        <tr>
-                            <td>1206.10</td>
-                            <td>1207.10</td>
-                            <td class="pos-change">+23.40</td>
-                        </tr>
-                        <tr>
-                            <td>Bid</td>
-                            <td>Ask</td>
-                            <td>Change</td>
-                        </tr>
-                    </table>
-                </section>
+                    </div>
+
+                    <div class="market-item-stats">
+                        <table>
+                            <tr>
+                                <td id='bid'></td>
+                                <td id='ask'></td>
+                                <td id='change'></td>
+                            </tr>
+                            <tr>
+                                <td>Bid</td>
+                                <td>Ask</td>
+                                <td>Change</td>
+                            </tr>
+                        </table>
+                    </div>
+
+
+                </div>
+                
             </section>
         </section>
-
         <section class="graph-panel">
-<!--
             <section class="chart-legend">
                 <div class="legend-left-half">
                     <section class="legend-item">
@@ -147,11 +151,11 @@
                     </section>
                     <section class="legend-item">
                         <div class="legend-item-color" id="legend-2"></div>
-                        Platinum Total
+                        Silver Total
                     </section>
                     <section class="legend-item">
                         <div class="legend-item-color" id="legend-3"></div>
-                        Silver Total
+                        Platinum Total
                     </section>
                 </div>
                 <div class="legend-right-half">
@@ -161,25 +165,41 @@
                     </section>
                     <section class="legend-item">
                         <div class="legend-item-color" id="legend-5"></div>
-                        1oz Platinum
+                        1oz Silver
                     </section>
                     <section class="legend-item">
                         <div class="legend-item-color" id="legend-6"></div>
-                        1oz Silver
+                        1oz Platinum
                     </section>
                 </div>
             </section>
--->
             <div class="chart-y-label">PRICE</div>
             <div class="chart-x-label">TIME</div>
             <section class="chart-wrap">
-                <!--                     <canvas id="total-chart"></canvas> -->
-                <div id='chartDiv'></div>
+                <div id="chartDiv"></div>
             </section>
         </section>
-    </section>
 
+        <section class="my_stack">
+            <div class="table-container">
+                <div id="tloader" class="table-loader">
+                    <i class=""><span class="fa fa-spinner fa-spin"></span></i>
+                </div>
+               
+                        <section class="label-and-search">
+                            <div class="stack_ctrl">
+                                <input type="search" placeholder="Search"/>
+                                <a href="wire5.html">
+                                    <i class="fa fa-plus fa-2x"></i>
+                                </a>
+                            </div>
+                        </section>
+                                           
+            </div>
+        </section>
+    </section>
 </section>
+
 
 <script>
 loadFooter();
