--- a/view/login.html
+++ b/view/login.html
@@ -14,7 +14,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/velocity.min.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/cookies.main.js"></script>
+    <script src="../js/cookies.min.js"></script>
 </head>
 
 <body>
@@ -70,16 +70,17 @@
 							// Parse the string into a JSON obj
 							var tmpObj = JSON.parse(req.responseText);
 							// Cookies wrapper library at 1kb for convenience
-							Cookies.set('sessionToken', tmpObj.sessionToken);
-							console.log('Session Token: '+ Cookies.get('sessionToken'));
+							cookie.set('sessionToken', tmpObj.sessionToken);
+							console.log('Session Token: '+ cookie.get('sessionToken'));
                             window.location.href = "wire2.html";
 						} else {                      // CASE ERROR
-                            var errorMessage = "";
+                            var errorMessage = "Invalid information.<br>Please try again.";
+                            /*
                             if (username === "")
                                 errorMessage = errorMessage + "Username is required!<br>";
                             if (password === "")
                                 errorMessage = errorMessage + "Password is required!<br>";
-
+                            */
 							console.log("Error: ", req.statusText);
                             document.getElementById('alert-box').style.color = "RED";
                             document.getElementById('alert-box').innerHTML = errorMessage;
