--- a/view/wire2.html
+++ b/view/wire2.html
@@ -6,54 +6,28 @@
     <meta name="description" content="bullion management site, rare coins, gold, silver, platinum">
     <meta name="author" content="CSE134B Dream Team">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
-
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
-    <title>My Gold - CoinFlip</title>
-    <script src="../js/main.js"></script>
-    <script src="../js/wire3.js"></script>
+    <script src="../js/jquery-1.11.2.min.js"></script>
+    <!--     <script src="../js/Chart.js"></script> -->
     <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
-    <script src="../js/zingdata.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/wire2.js"></script>
+    <title>Home - CoinFlip</title>
 </head>
 
 <body>
-
-<script>
-loadTopNav();
-loadSideNav(1);
-</script>
+<script>loadTopNavPersist();</script>
+<script>loadSideNav(0);</script>
 
 <section class="main-section">
     <section class="coin_wrapper">
-        <div class="mobile-nav">
-            <a href="wire2.html">
-                <svg class="icon icon-keyboard-arrow-left">
-                    <symbol id="icon-keyboard-arrow-left" viewBox="0 0 1024 1024">
-                        <title>keyboard-arrow-left</title>
-                        <path class="path1" d="M657.707 696.96l-195.627-195.627 195.627-195.627-60.373-60.373-256 256 256 256z"></path>
-                    </symbol>
-                    <use xlink:href="#icon-keyboard-arrow-left"></use>
-                </svg>
-            </a>
-         </div>
         <section class="overview-panel">
-            <section id="total-value" class="total-value">
+            <section class="total-value">
                 <div class="total-dollars">0</div>
-                <table class="current_gold">
-                    <tr>
-                        <td>Daily</td>
-                        <td id="daily-percent">0</td>
-                    </tr>
-                    <tr>
-                        <td>Overall</td>
-                        <td id="overall-percent">0</td>
-                    </tr>
-                </table>
-                <div class="total-label" id="my_gold_value">My Total Stack Value</div>
-
+                <div class="total-change pos-change">0</div><br/>
+                <div class="total-label">My Total Coin Value</div>
             </section>
             <section class="mobile-toggle">
                 <div class="mobile-toggle-button mtb-1 mobile-toggle-selected">
@@ -75,131 +49,103 @@ loadSideNav(1);
                     </svg>
                 </div>
             </section>
+            <section class="market-status">
+                <div class="market-open">Market is open</div>
+                <div class="market-time">closes in 3h 36min</div>
+            </section>
+            <section class="market-list">
 
-            <section class="market-item-container">
-                <div id="mloader" class="market-item-loader">
-                    <i class=""><span class="fa fa-spinner fa-spin"></span></i>
-                </div>
-                <div class="market-list">
-
-                    <div class="market-item-header" id="gold">
+                <a href="wire3.html">
+                    <section class="market-item-header">
                         Gold
-                    </div>
+                        <svg class="icon icon-play-arrow">
+                            <symbol id="icon-play-arrow1" viewBox="0 0 1024 1024">
+                                <title>play-arrow</title>
+                                <path class="path1" d="M341.333 213.333v597.333l469.333-298.667z"></path>
+                            </symbol>
+                            <use xlink:href="#icon-play-arrow1"></use>
+                        </svg>
+                    </section>
+                </a>
+                <section class="market-item-stats">
+                    <table>
+                        <tr>
+                            <td id="gold-ask">0</td>
+                            <td id="gold-bid">0</td>
+                            <td id="gold-change"class="pos-change">0</td>
+                        </tr>
+                        <tr>
+                            <td>Bid</td>
+                            <td>Ask</td>
+                            <td>Change</td>
+                        </tr>
+                    </table>
+                </section>
 
-                    <div class="market-item-stats">
-                        <table>
-                            <tr>
-                                <td id='bid'></td>
-                                <td id='ask'></td>
-                                <td id='change'></td>
-                            </tr>
-                            <tr>
-                                <td>Bid</td>
-                                <td>Ask</td>
-                                <td>Change</td>
-                            </tr>
-                        </table>
-                    </div>
-					<div class="market-item-header" id="silver">
+
+                <a href="wire3.html">
+                    <section class="market-item-header">
                         Silver
-                    </div>
-
-                    <div class="market-item-stats">
-                        <table>
-                            <tr>
-                                <td id='bid'></td>
-                                <td id='ask'></td>
-                                <td id='change'></td>
-                            </tr>
-                            <tr>
-                                <td>Bid</td>
-                                <td>Ask</td>
-                                <td>Change</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="market-item-header" id="platinum">
+                        <svg class="icon icon-play-arrow">
+                            <symbol id="icon-play-arrow2" viewBox="0 0 1024 1024">
+                                <title>play-arrow</title>
+                                <path class="path1" d="M341.333 213.333v597.333l469.333-298.667z"></path>
+                            </symbol>
+                            <use xlink:href="#icon-play-arrow2"></use>
+                        </svg>
+                    </section>
+                </a>
+                <section class="market-item-stats">
+                    <table>
+                        <tr>
+                            <td id="silver-bid">0</td>
+                            <td id="silver-ask">0</td>
+                            <td id="silver-change" class="neg-change">0</td>
+                        </tr>
+                        <tr>
+                            <td>Bid</td>
+                            <td>Ask</td>
+                            <td>Change</td>
+                        </tr>
+                    </table>
+                </section>
+                <a href="wire3.html">
+                    <section class="market-item-header">
                         Platinum
-                    </div>
-
-                    <div class="market-item-stats">
-                        <table>
-                            <tr>
-                                <td id='bid'></td>
-                                <td id='ask'></td>
-                                <td id='change'></td>
-                            </tr>
-                            <tr>
-                                <td>Bid</td>
-                                <td>Ask</td>
-                                <td>Change</td>
-                            </tr>
-                        </table>
-                    </div>
-
-
-                </div>
-                
+                        <svg class="icon icon-play-arrow">
+                            <symbol id="icon-play-arrow3" viewBox="0 0 1024 1024">
+                                <title>play-arrow</title>
+                                <path class="path1" d="M341.333 213.333v597.333l469.333-298.667z"></path>
+                            </symbol>
+                            <use xlink:href="#icon-play-arrow3"></use>
+                        </svg>
+                    </section>
+                </a>
+                <section class="market-item-stats">
+                    <table>
+                        <tr>
+                            <td id="platinum-bid">0</td>
+                            <td id="platinum-ask">0</td>
+                            <td id="platinum-change" class="pos-change">0</td>
+                        </tr>
+                        <tr>
+                            <td>Bid</td>
+                            <td>Ask</td>
+                            <td>Change</td>
+                        </tr>
+                    </table>
+                </section>
             </section>
         </section>
+
         <section class="graph-panel">
-            <section class="chart-legend">
-                <div class="legend-left-half">
-                    <section class="legend-item">
-                        <div class="legend-item-color" id="legend-1"></div>
-                        Gold Total
-                    </section>
-                    <section class="legend-item">
-                        <div class="legend-item-color" id="legend-2"></div>
-                        Silver Total
-                    </section>
-                    <section class="legend-item">
-                        <div class="legend-item-color" id="legend-3"></div>
-                        Platinum Total
-                    </section>
-                </div>
-                <div class="legend-right-half">
-                    <section class="legend-item">
-                        <div class="legend-item-color" id="legend-4"></div>
-                        1oz Gold
-                    </section>
-                    <section class="legend-item">
-                        <div class="legend-item-color" id="legend-5"></div>
-                        1oz Silver
-                    </section>
-                    <section class="legend-item">
-                        <div class="legend-item-color" id="legend-6"></div>
-                        1oz Platinum
-                    </section>
-                </div>
-            </section>
-            <div class="chart-y-label">PRICE</div>
-            <div class="chart-x-label">TIME</div>
             <section class="chart-wrap">
-                <div id="chartDiv"></div>
+                <div id='chartDiv'></div>
             </section>
-        </section>
-
-        <section class="my_stack">
-            <div class="table-container">
-                <div id="tloader" class="table-loader">
-                    <i class=""><span class="fa fa-spinner fa-spin"></span></i>
-                </div>
-               
-                        <section class="label-and-search">
-                            <div class="stack_ctrl">
-                                <input type="search" placeholder="Search"/>
-                                <a href="wire5.html">
-                                    <i class="fa fa-plus fa-2x"></i>
-                                </a>
-                            </div>
-                        </section>
-                                           
-            </div>
         </section>
     </section>
-</section>
 
+</section>
 
 <script>
 loadFooter();
