Get market price

--- a/view/wire2.html
+++ b/view/wire2.html
@@ -9,10 +9,10 @@
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="../js/jquery-1.11.2.min.js"></script>
     <!--     <script src="../js/Chart.js"></script> -->
     <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../assets/promise.js"></script>
     <script src="../js/wire2.js"></script>
     <title>Home - CoinFlip</title>
 </head>
