Added calculations to table

--- a/view/wire4.html
+++ b/view/wire4.html
@@ -89,15 +89,15 @@
                         </tr>
                         <tr>
                             <td id='metalunit'></td>
-                            <td id='perunit'></td>
+                            <td id='ounceunit'></td>
                         </tr>
                         <tr>
                             <td id='metalozt'></td>
-                            <td id='ozt'></td>
+                            <td id='troyounces'></td>
                         </tr>
                         <tr>
                             <td>Total (ozt)</td>
-                            <td id='totalau'></td>
+                            <td id='totaltroy'></td>
                         </tr>
                         <tr>
                             <td><strong>TOTAL</strong></td>
