The damn time works

--- a/view/wire2.html
+++ b/view/wire2.html
@@ -10,10 +10,15 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!--     <script src="../js/Chart.js"></script> -->
-    <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
+
+
     <script src="../js/main.js"></script>
     <script src="../assets/promise.js"></script>
     <script src="../js/wire2.js"></script>
+
+    <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
+    <script src="../js/wire2.chart.js"></script>
+
     <title>Home - CoinFlip</title>
 </head>
 
