--- a/view/wire3.html
+++ b/view/wire3.html
@@ -14,6 +14,7 @@
 
     <title>My Gold - CoinFlip</title>
     <script src="../js/main.js"></script>
+    <script src="../js/cacheit.js"></script>
     <script src="../js/wire3.js"></script>
 
     <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
